<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">德古拉</string>
    <string name="home_app_title">德古拉</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home_radio_app">应用中心</string>
    <string name="home_radio_order">交易记录</string>
    <string name="home_radio_acc">我</string>
    <string name="home_radio_more">消息</string>
    <string name="btn_next_text">下一步</string>
    <string name="btn_pre_text">上一步</string>
    <string name="btn_home_text">首页</string>
    <string name="btn_return_text">返回</string>
    <string name="btn_reg_text">注册</string>
    <string name="btn_reg_agree_text">同意</string>
    <string name="btn_login_text">登录</string>
    <string name="btn_fastlogin_text">快速登录</string>
    <string name="btn_lostpwd_text">忘记密码?</string>
    <string name="btn_logout_text">注销登录</string>
    <string name="btn_reg_gologin_text">前往登录</string>
    <string name="btn_reg_regnow_text">立即注册</string>
    <string name="btn_reg_getcode_text">获取验证码</string>
    <string name="title_app">德古拉支付</string>
    <string name="title_order">交易记录</string>
    <string name="title_acc">账户管理</string>
    <string name="title_more">更多消息</string>
    <string name="title_login">登录</string>
    <string name="title_register">用户注册</string>
    <string name="title_reg_agree">注册协议</string>
    <string name="title_findpwd">找回密码</string>
    <string name="btn_findpwd">立即找回</string>
    <string name="tip_findpwd_newpwd">请输入新密码</string>
    <string name="title_order_detail">交易详情 </string>
    <string name="title_order_confirm">订单支付</string>
    <string name="title_order_signature">订单签名</string>
    <string name="title_makesignature">书写签名</string>
    <string name="title_moneyinput_receivemoney">收款</string>
    <string name="title_moneyinpu_acccharge">账户充值</string>
    <string name="title_readcard">读卡设备</string>
    <string name="title_queryblance_result">查询余额</string>
    <string name="title_user_info">用户信息</string>
    <string name="title_card_info">银行卡信息</string>
    <string name="title_device_info">设备信息</string>
    <string name="title_accsecurity">账户安全</string>
    <string name="title_paytype">支付方式</string>
    <string name="title_takemoney">提现</string>
    <string name="title_transacc">卡卡转账</string>
    <string name="title_repaycredit">还信用卡</string>
    <string name="title_phonecharge">手机充值</string>
    <string name="title_feedback">意见反馈</string>
    <string name="title_aboutus">关于我们</string>
    <string name="title_help">用户帮助</string>
    <string name="title_news">消息通知</string>
    <string name="title_banben">项目版本</string>
    <string name="title_guide">新手指引</string>
    <string name="title_activate">激活账号</string>
    <string name="title_realname">实名认证</string>
    <string name="title_bind_maincard">绑定银行卡</string>
    <string name="title_bind_othercard">认证信用卡</string>
    <string name="title_bind_device">绑定设备</string>
    <string name="title_showblance">账户信息</string>
    <string name="hint_login_phone">请输入手机号</string>
    <string name="hint_login_pwd">请输入密码</string>
    <string name="hint_pay_pwd">请输入支付密码</string>
    <string name="hint_reg_repwd">请再次输入密码</string>
    <string name="hint_reg_code">短信验证码</string>
    <string name="hint_moneyinput_money">请输入金额</string>
    <string name="hint_realname_name">请输入真实姓名</string>
    <string name="hint_realname_idno">请输入证件号码</string>
    <string name="resetpwd_title_newlogin">修改登录密码</string>
    <string name="resetpwd_hint_hislogin">请输入原登录密码</string>
    <string name="resetpwd_hint_newlogin">请输入新登录密码</string>
    <string name="resetpwd_hint_relogin">重复新登录密码</string>
    <string name="resetpwd_title_newpay">修改支付密码</string>
    <string name="resetpwd_hint_hispay">请输入原登录密码</string>
    <string name="resetpwd_hint_newpay">请输入新支付密码</string>
    <string name="resetpwd_hint_repay">重复新支付密码</string>
    <string name="resetpwd_btn_reset">立即修改</string>
    <string name="toast_login">您还没有登录</string>
    <string name="toast_login_timeout">连接超时了，请重新登录下</string>
    <string name="toast_moneyinput_validmoney">请输入正确金额</string>
    <string name="aboutus_phone">400-9999-112</string>
    <string name="config_serverurl"></string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_help1">Help1Activity</string>
    <string name="title_activity_help2">Help2Activity</string>
    <string name="title_activity_help3">Help3Activity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_listain">ListainActivity</string>
    <string name="title_activity_banben">BanbenActivity</string>

</resources>
