<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
	<com.rxoa.zlpay.base.BaseViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
	
    <LinearLayout
        android:id="@+id/home_line_bottom"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|center"
        android:background="#E8E8E8"
        android:orientation="horizontal" >
        
        <RadioGroup
            android:id="@+id/main_tab_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingTop="2.0dp" >

            <RadioButton
                android:id="@+id/main_tab_app"
                style="@style/home_tab_radio"
                android:checked="true"
                android:layout_height="50dp"
                android:drawableTop="@drawable/home_radio_app"
                android:text="@string/home_radio_app" />

            <RadioButton
                android:id="@+id/main_tab_order"
                style="@style/home_tab_radio"
                android:drawableTop="@drawable/home_radio_order"
                android:text="@string/home_radio_order" />
             <RadioButton
                android:id="@+id/main_tab_more"
                style="@style/home_tab_radio"
                android:drawableTop="@drawable/home_radio_more"
                android:text="@string/home_radio_more" />

            <RadioButton
                android:id="@+id/main_tab_acc"
                style="@style/home_tab_radio"
                android:drawableTop="@drawable/home_radio_acc" 
                android:text="@string/home_radio_acc" />

            
        </RadioGroup>
    </LinearLayout>
</RelativeLayout>
