<?xml version="1.0" encoding="UTF-8"?>    
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/top_relative"
	android:layout_width="fill_parent"
	android:layout_height="50.0dip" >

    <ImageView
        android:id="@+id/title_bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/biaoti" />

    <ImageView
        android:id="@+id/progressImage"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:background="#00ffffff"
        android:visibility="gone" />

    <Button
        android:id="@+id/titleLeftButton"
        style="\@style/title_right_button"
        android:layout_width="60.0dip"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="12dip"
        android:layout_marginBottom="8dip"
        android:background="@drawable/title_left_button"
        android:layout_centerVertical="false"
        android:layout_gravity="center_vertical"
        
        android:layout_marginLeft="15.0dip"
        android:gravity="center_vertical|center"
        android:paddingRight="-10dip"
		android:text="@string/btn_return_text"
		android:textColor="#ffeeeeee"
		android:textSize="18sp"
		android:textStyle="bold"
		android:visibility="gone"
        />
    
    <Button
        android:id="@+id/titleRightButton"
        style="\@style/title_right_button"
        android:layout_width="80.0dip"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="12dip"
        android:layout_marginBottom="8dip"
        android:layout_centerVertical="false"
        android:layout_gravity="center_vertical"
        android:background="#00ffffff"
        android:layout_marginRight="5.0dip"
        android:gravity="center_vertical|center"
        android:paddingLeft="-10dip"
		android:text="@string/btn_reg_text"
		android:textColor="#ffEEEEEE"
		android:textSize="18sp"
		android:textStyle="bold"
		android:visibility="gone"
        />

    <TextView
		android:id="@+id/titleText"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:textSize="23sp"
		android:padding="10.0dip"
		android:text="@string/home_app_title"
		android:gravity="center_vertical|center"
		android:textColor="@color/white"
		android:singleLine="true" />
</RelativeLayout>