<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rxoa.zlpay.MainActivity" >

    <include
        android:id="@+id/top_header"
        layout="@layout/sec_header_withdouble2" />

    <LinearLayout
        android:id="@+id/lnr_reg_phone1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/top_header"
        android:orientation="horizontal" 
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/head" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnr_reg_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnr_reg_phone1"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_inputbox"
        android:orientation="horizontal"
        android:paddingLeft="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/login_inputicon_phone"
            android:contentDescription="" />

        <EditText
            android:id="@+id/reg_edt_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="15.0dip"
            android:background="#ffffffff"
            android:ems="10"
            android:hint="@string/hint_login_phone"
            android:inputType="phone"
            android:paddingLeft="0.0dip"
            android:singleLine="true"
            android:textSize="18.0sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnr_reg_pwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnr_reg_phone"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_inputbox"
        android:orientation="horizontal"
        android:paddingLeft="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/login_inputicon_pwd"
            android:contentDescription="" />

        <EditText
            android:id="@+id/reg_edt_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="15.0dip"
            android:background="#ffffffff"
            android:ems="10"
            android:hint="@string/hint_login_pwd"
            android:inputType="textPassword"
            android:paddingLeft="0.0dip"
            android:singleLine="true"
            android:textSize="18.0sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnr_reg_repwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnr_reg_pwd"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_inputbox"
        android:orientation="horizontal"
        android:paddingLeft="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/login_inputicon_pwd"
            android:contentDescription="" />

        <EditText
            android:id="@+id/reg_edt_repwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="15.0dip"
            android:background="#ffffffff"
            android:ems="10"
            android:hint="@string/hint_reg_repwd"
            android:inputType="textPassword"
            android:paddingLeft="0.0dip"
            android:singleLine="true"
            android:textSize="18.0sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnr_reg_code"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/lnr_reg_repwd"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/lnr_reg_codein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:background="@drawable/login_inputbox"
            android:orientation="horizontal"
            android:paddingLeft="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/reg_icon_code"
                android:contentDescription="" />

            <EditText
                android:id="@+id/reg_edt_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="12.0dip"
                android:background="#ffffffff"
                android:ems="10"
                android:hint="@string/hint_reg_code"
                android:paddingBottom="3dp"
                android:paddingLeft="0.0dip"
                android:paddingTop="3dp"
                android:singleLine="true"
                android:textSize="18.0sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/reg_vimage"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center"
            android:layout_marginLeft="3dp"
            android:gravity="center_vertical|center"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_getcode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/btn_reg_getcode_text"
            android:textColor="#ffAAAAAA"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/reg_tip_getcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/lnr_reg_code"
        android:layout_alignRight="@id/lnr_reg_code"
        android:layout_below="@id/lnr_reg_code"
        android:layout_marginTop="15dp"
        android:paddingLeft="3dp"
        android:text=""
        android:textColor="#ffcc6666" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_tip_getcode"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_common_yellow"
        android:text="@string/btn_reg_regnow_text"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/lnr_reg_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/btn_reg"
        android:layout_below="@id/btn_reg"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/reg_login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

    </LinearLayout>

</RelativeLayout>